# ot-harjoitustyo

./: .gitignore  README.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
osakeseuranta/: .coveragerc  pyproject.toml  tasks.py
osakeseuranta/dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  työaikakirjanpito.md  vaatimusmaarittely.md
osakeseuranta/src/: build.py  config.py  database_connection.py  initialize_database.py  run.py  testing.py
osakeseuranta/src/data/: OMX25H.csv  OMX25H_test.csv  search_list.csv  test-database.sqlite
osakeseuranta/src/entities/: user.py
osakeseuranta/src/repositories/: reader.py  stock_repository.py  user_repository.py
osakeseuranta/src/services/: marketdata.py  marketinfo.py  singlestockdata.py  stock_services.py  user_services.py
osakeseuranta/src/tests/: conftest.py
osakeseuranta/src/tests/repositories/: stock_repository_test.py  user_repository_test.py
osakeseuranta/src/tests/services/: marketdata_test.py  stock_services_test.py  stockdata_test.py  user_services_test.py
osakeseuranta/src/ui/: create_user_login_view.py  day_view.py  ui.py  user_view.py  year_view.py  ytd_view.py
